[project]
name = "bybit-dump"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.12",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "openpyxl (>=3.1.5,<4.0.0)",
    "curl-cffi>=0.13.0",
]
